automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 				<div class="logo">
 					<h2>Press</h2>
 					<a href="http://nmai.si.edu"><img src="images/nmai-logo.png" alt="National Museum of the American Indian Logo"></a>
-
-					<span><img src="images/times-logo.png" alt="New York Times Logo"></span>
+					<a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" alt="New York Times Logo"></a>
 					<span><img src="images/sedona-logo.png" alt="Sedona Logo"></span>
 					<span><img src="images/bergdorf-logo.png" alt="Bergdorf Logo"></span>
 				</div>
