--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<h2>Press</h2>
 					<a href="http://nmai.si.edu"><img src="images/nmai-logo.png" alt="National Museum of the American Indian Logo"></a>
 					<a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" alt="New York Times Logo"></a>
-					<span><img src="images/sedona-logo.png" alt="Sedona Logo"></span>
-					<span><img src="images/bergdorf-logo.png" alt="Bergdorf Logo"></span>
+					<a href="#"><img src="images/sedona-logo.png" alt="Sedona Logo"></a>
+					<a href="#"><img src="images/bergdorf-logo.png" alt="Bergdorf Logo"></a>
 				</div>
 
 			<!-- write HTML code neccesary here -->
